--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,50 +1,42 @@
 body {
-  background: #aaa;
+  background: #000;
   margin: 0;
   padding: 0;
   overflow: hidden;
-  /*padding: 20px 0 0 0;*/
-  /*display: flex;*/
-  /*align-items: center;*/
-  cursor: crosshair;
 }
 
-#p5_loading {
+/*#loading {
   color: white;
   font-family: "Comic Sans MS", cursive, sans-serif;
   font-size: 3em;
   font-weight: bold;
   text-align: center;
   margin: 0 auto;
-}
+}*/
 
-#sketch-container {
+/*#sketch-container {
   position: relative;
   display: block;
   margin: 0 auto;
-}
+}*/
 
 canvas#cvs {
-  /*background-color: #000;*/
-  border: 1px solid #FFF;
-  /*display: flex;*/
-  height: auto !important;
-  /*margin: 0 auto;*/
-  padding: 0;
-  width: 640px;
-  /*display: inline-block;*/
-  /*align-items: center;*/
+  border: 2px dashed #00FF00;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-
+/*
 #audio-button {
   width: 32px;
   height: 32px;  
   position: absolute;
   right: 10;
   bottom: 10;
-  display:none;/* we don't show unless we have a background image */
-}
+  display:none; we don't show unless we have a background image 
+}*/
 
 /*#debug {
   background-color: transparent;
